--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width", initial-scale="1">
-        <title>Pokedex App</title>
+        <title>Home - Pokedex App</title>
         <link href="css/styles.css" rel="stylesheet" type="text/css" />
+        <link rel="shortcut icon" href="./img/favicon-32x32.png">
     </head>
     <body>
         <script src="js/scripts.js"></script>
