Added CSS styling - background color, font color, font
Changed the background color to dark grey, font color to light grey, and fond family to chivo mono.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width", initial-scale="1">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Chivo+Mono&display=swap" rel="stylesheet">
         <title>Home - Pokedex App</title>
         <link href="css/styles.css" rel="stylesheet" type="text/css" />
         <link rel="shortcut icon" href="./img/favicon-32x32.png">
