--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <link rel="shortcut icon" href="./img/favicon-32x32.png">
     </head>
     <body>
+        <h1>Pokedex</h1>
+        <ul class="pokemon-list"></ul>
         <script src="js/scripts.js"></script>
     </body>
 
