styles.css removed webkit appearance from modal-close

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width", initial-scale="1">
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width", initial-scale="1" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Chivo+Mono&display=swap" rel="stylesheet">
@@ -11,7 +11,9 @@
         <link rel="shortcut icon" href="./img/favicon-32x32.png">
     </head>
     <body>
-        <h1>Pokedex</h1>
+        <div id="modal-container"></div>
+
+
         <ul class="pokemon-list"></ul>
         <script src="js/scripts.js"></script>
     </body>
