Added link to homepage on navbar text, added navbar title styling in css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     </head>
     <body>
         <nav class="navbar fixed-top">
-            <h1 class="navbar-text">Kanto Pokédex</h1>
+          <a class="navbar-brand navbar-text navbar-kanto" href="index.html">Kanto Pokedex</a>
+            <!-- <h1 class="navbar-text">Kanto Pokédex</h1> -->
             <form class="navbar-form form-inline">
               <input class="form-control search" type="search" placeholder="Search" aria-label="Search">
             </form>
