--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Chivo+Mono&display=swap" rel="stylesheet">
-        <title>Kanto Pokedex</title>
-        <link href="css/styles.css" rel="stylesheet" type="text/css" />
+        <link href="dist/styles.min.css" rel="stylesheet" type="text/css" />
         <link rel="shortcut icon" href="./img/favicon-32x32.png">
+        <title>Kanto Pokedex</title>
     </head>
     <body>
         <nav class="navbar fixed-top">
@@ -48,7 +48,7 @@
          <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        <script src="js/scripts.js"></script>
+        <script src="dist/scripts.min.js"></script>
     </body>
 
 </html>
